# exdrf

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  distlift.toml  pyrightconfig.json  ruff.toml
exdrf/: CHANGELOG.md  README.md  pyproject.toml
exdrf-dev/: CHANGELOG.md  README.md  pyproject.toml
exdrf-dev/exdrf_dev/: __version__.py  cli.py  pytest_dirs.py  remove_empty_file_named_file.py
exdrf-dev/exdrf_dev/app/: __main__.py  main_window.py  main_window.ui  main_window_ui.py
exdrf-dev/exdrf_dev/db/: api.py  models.py  populate.py
exdrf-dev/exdrf_dev/field_ed_show/: __main__.py  main_window.py  main_window.ui  main_window_ui.py
exdrf-dev/exdrf_dev/migrations/: 6870ef2417bc_.py
exdrf-dev/exdrf_dev/qt/: menus.py
exdrf-dev/exdrf_dev/qt_gen/: menus.py  plugins.py  router.py
exdrf-dev/exdrf_dev/select_model_show/: __main__.py  main_window.py
exdrf-dev/exdrf_dev_tests/: conftest.py  release_tag_test.py
exdrf-gen/: CHANGELOG.md  README.md  pyproject.toml
exdrf-gen-al2qt/: CHANGELOG.md  README.md  pyproject.toml
exdrf-gen-al2qt/exdrf_gen_al2qt/: __init__.py  __version__.py  creator.py
exdrf-gen-al2qt/exdrf_gen_al2qt/al2qt_templates/: menus.py.j2  plugins.py.j2  router.py.j2
exdrf-gen-al2qt/exdrf_gen_al2qt/templates/: __init__.py.j2  menus.py.j2  plugins.py.j2  router.py.j2
exdrf-gen-al2qt/tests/: test_cmp_generator_test.py
exdrf-gen-al2r/: CHANGELOG.md  README.md  pyproject.toml
exdrf-gen-al2r/exdrf_gen_al2r/: __init__.py  __version__.py  creator.py  list_query_specs.py  list_route_specs.py  relation_specs.py
exdrf-gen-al2r/tests/: creator_collision_test.py  creator_test.py  list_query_specs_test.py  list_route_specs_test.py  relation_specs_resi_cdb_entity_test.py  relation_specs_test.py
exdrf-gen-al2xl/: CHANGELOG.md  README.md  pyproject.toml
exdrf-gen-al2xl/exdrf_gen_al2xl/: __init__.py  __version__.py  creator.py
exdrf-gen-al2xl/exdrf_gen_al2xl/al2xl_templates/: api.py.j2  schema_from_text.py.j2
exdrf-gen-openapi2rtk/: CHANGELOG.md  README.md  pyproject.toml
exdrf-gen-openapi2rtk/exdrf_gen_openapi2rtk/: __init__.py  __version__.py  creator.py  endpoint_keys.py  openapi_cache.py  spec_routes.py
exdrf-gen-openapi2rtk/tests/: openapi2rtk_cli_test.py  spec_routes_opid_test.py
exdrf-gen-openapi2rtk/tests/fixtures/: minimal_openapi.json
exdrf-gen-pd2dare/: CHANGELOG.md  README.md  pyproject.toml
exdrf-gen-pd2dare/exdrf_gen_pd2dare/: __init__.py  __version__.py  creator.py
exdrf-gen-pd2dare/exdrf_gen_pd2dare/testdata/: __init__.py  stub_dare_models.py
exdrf-gen-pd2dare/tests/: pd2dare_cli_test.py
exdrf-gen/exdrf_gen/: __init__.py  __main__.py  __version__.py  cli_base.py  fs_support.py  jinja_support.py  plugin_support.py  py_support.py  template_emit.py
exdrf-qt/: CHANGELOG.md  README.md  pyproject.toml
exdrf-qt/exdrf_qt/: __version__.py  context.py  context_use.py  local_settings.py  menus.py  plugins.py  validator.py  worker.py
exdrf-qt/exdrf_qt/controls/: __init__.py  base_editor.py  checkable_combo.py  crud_actions.py  filter_header.py  json_editor.py  new_search_line.py  param_controls.py  popup_list.py  record_cmp_base.py  search_line.py  search_list.py  sel_single.py  table_list.py  table_viewer.py  toast.py  transfer.py  tree_header.py  tree_list.py
exdrf-qt/exdrf_qt/field_ed/: api.py  base.py  base_date.py  base_drop.py  base_line.py  base_number.py  choices_mixin.py  fed_blob.py  fed_bool.py  fed_date.py  fed_dt.py  fed_enum.py  fed_int.py  fed_m_text.py  fed_real.py  fed_related.py  fed_s_text.py  fed_sel_multi.py  fed_sel_multi_old.py  fed_sel_one.py  fed_sel_one_old.py  fed_time.py
exdrf-qt/exdrf_qt/models/: __init__.py  cache.py  fi_item.py  fi_op.py  field.py  field_list.py  fields.py  model.py  proxy.py  record.py  requests.py  sel_model.py  selector.py
exdrf-qt/exdrf_qt/scripts/: gen_ui_file.py
exdrf-qt/exdrf_qt/utils/: attr_dict.py  del_actions.py  examine_threads.py  flt_acts.py  html2docx.py  native_threads.py  plugins.py  reload_module.py  router.py  screen_grabber.py  search_actions.py  sql_formatter.py  stay_open_menu.py  t_collector.py  tlh.py
exdrf-qt/exdrf_qt/widgets/: __init__.py  auto_slots.py
exdrf-qt/exdrf_qt_tests/: conftests.py  test_local_settings.py  test_worker.py
exdrf-qt/exdrf_qt_tests/comparator/: conftest.py  test_adapter.py  test_manager.py  test_merge_delegate_test.py  test_merge_logic_test.py  test_nodes.py  test_tree_model.py  test_tree_view.py  test_webview.py
exdrf-qt/exdrf_qt_tests/controls/: conftest.py  test_record_cmp_base_test.py
exdrf-qt/exdrf_qt_tests/models/: test_cache.py  test_fi_item.py  test_fi_item_shim.py  test_fi_op.py  test_fi_op_shim.py  test_field.py  test_field_list.py  test_model.py  test_proxy.py  test_record.py  test_requests.py  test_selector.py
exdrf-rcv/: CHANGELOG.md  README.md  pyproject.toml
exdrf-rcv/exdrf_rcv/: __init__.py  __version__.py  models.py  plan.py  plan_resolve.py
exdrf-rcv/tests/: models_test.py  package_import_test.py  plan_resolve_test.py
exdrf-util/: CHANGELOG.md  README.md  pyproject.toml
exdrf-util/exdrf_util/: __version__.py  check.py  check_verbose.py  merge_pdfs.py  pdf_common.py  rotate_backups.py  table2base.py  table2doc.py  table2pdf.py  table_writer.py  task.py  typedefs.py  xl_writer.py
exdrf-util/tests/: __init__.py
exdrf-xl/: CHANGELOG.md  README.md  pyproject.toml
exdrf-xl/exdrf_xl/: __version__.py  column.py  review_html.py  schema.py  table.py
exdrf-xl/exdrf_xl/ingest/: __init__.py  apply_import_plan.py  apply_result.py  cell_diff.py  tools.py  (+7 more)
exdrf-xl/tests/: test_table_formatting_test.py
exdrf/exdrf/: __version__.py  api.py  constants.py  dataset.py  field.py  filter.py  filter_dsl.py  filter_op_catalog.py  label_dsl.py  moment.py  pep621_version.py  py_support.py  resource.py  sa_fi_item.py  sa_filter_op.py  utils.py  validator.py  var_bag.py  visitor.py
exdrf/exdrf_tests/: test_dataset.py  test_field.py  test_filter.py  test_filter_dsl.py  test_label_dsl.py  test_resource.py  test_utils.py  test_visitor.py  var_bag_test.py
(+599 files in other folders)
