[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
license = "MIT"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
description = "Development helpers for Ex-DRF."
version = "0.1.17"
name = "exdrf-dev"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
  "PyQt5>=5.15.11",
  "click>=8.1.8,<8.2.0",
  "dotenv>=0.9.9",
  "exdrf",
]

[tool.deptry]
package_module_name_map = { "factory-boy" = ["factory"] }

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "factory-boy>=3.3.1",
  "Faker>=33.0.0",
  "flake8",
  "isort",
  "mypy",
  "ruff",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exdrf_dev = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
extend-ignore = ["E203", "E501", "W503"]
