[project]
authors = [
  {name = "Nicu Tofan", email = "nicu.tofan@gmail.com"},
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "License :: Other/Proprietary License",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1.8,<8.2.0",
  "exdrf-al",
  "exdrf-gen",
  "exdrf-gen-al2pd",
]
description = "Generate FastAPI route modules from SQLAlchemy-backed ExDataset metadata."
dynamic = ["version"]
name = "exdrf-gen-al2r"
readme = "README.md"
requires-python = ">=3.12.2"

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=8.3.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]

[tool.setuptools_scm]
fallback_version = "0.0.1-dev"
version_file = "exdrf_gen_al2r/__version__.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312', 'py313']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80

[project.entry-points.'exdrf.plugins']
exdrf_gen = 'exdrf_gen_al2r'
