[project]
authors = [
  {name = "Nicu Tofan", email = "nicu.tofan@gmail.com"},
]
license = "MIT"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
dependencies = [
  "attrs>=25.1.0",
  "exdrf",
]
description = "Generate attrs models content using DRF from sqlalchemy models."
version = "0.1.14"
name = "exdrf-gen-al2xl"
readme = "README.md"
requires-python = ">=3.12.2"

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
  "click>=8.1.8,<8.2.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exdrf_gen_al2xl = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
extend-ignore = ["E203", "E501", "W503"]

[project.entry-points.'exdrf.plugins']
exdrf_gen = 'exdrf_gen_al2xl'
