[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
license = "MIT"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
dependencies = [
  "attrs",
  "click>=8.1.8,<8.2.0",
  "exdrf-gen",
  "exdrf-ts",
]
description = "Generate RTK Query TypeScript from OpenAPI (cached JSON)."
version = "0.1.16"
name = "exdrf-gen-openapi2rtk"
readme = "README.md"
requires-python = ">=3.12.2"

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
  "click>=8.1.8,<8.2.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exdrf_gen_openapi2rtk = ["openapi2rtk_templates/**/*.j2", "py.typed"]

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
extend-ignore = ["E203", "E501", "W503"]

[project.entry-points.'exdrf.plugins']
exdrf_gen = "exdrf_gen_openapi2rtk"
