[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "License :: Other/Proprietary License",
  "Typing :: Typed",
]
description = "Use Qt5 with Ex-DRF."
dynamic = ["version"]
name = "exdrf-qt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PyQt5>=5.15.11",
  "python-dateutil>=2.9.0",
  "humanize>=4.12.3",
  "html-for-docx>=1.0.6",
  "PyQtWebEngine>=5.15.7",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=8.3.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]

[tool.setuptools_scm]
fallback_version = "0.0.1-dev"
version_file = "exdrf_qt/__version__.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312', 'py313']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
