[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "License :: Other/Proprietary License",
  "Typing :: Typed",
]
description = "Use Qt6 (PyQt6) with Ex-DRF."
dynamic = ["version"]
name = "exdrf-qt"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
  "PyQt6>=6.6.0",
  "appdirs>=1.4.4",
  "python-dateutil>=2.9.0",
  "humanize>=4.12.3",
  "html-for-docx>=1.0.6",
  "attrs>=24.2.0",
  "parse>=1.20.2",
  "minify_html>=0.16.4",
  "pluggy>=1.6.0",
  "pyrsistent>=0.20.0",
  "exdrf-al",
  "SQLAlchemy>=2.0.38",
  "sqlparse>=0.5.3",
  "unidecode",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
  "click>=8.1.8,<8.2.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=8.3.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]

[tool.setuptools_scm]
fallback_version = "0.0.1-dev"
version_file = "exdrf_qt/__version__.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80

[tool.ruff]
line-length = 80
target-version = "py312"
extend-exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]  # E=pycodestyle, F=pyflakes, I=imports
ignore = ["ANN102", "ANN401", "E501", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
