[project]
authors = [
  {name = "Nicu Tofan", email = "nicu.tofan@gmail.com"},
]
license = "MIT"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
dependencies = [
  "exdrf",
]
description = "Shared Python runtime for remote-controlled-view backends and exdrf-gen-al2rcv-generated modules."
version = "0.1.16"
name = "exdrf-rcv"
readme = "README.md"
requires-python = ">=3.12.2"

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exdrf_rcv = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
extend-ignore = ["E203", "E501", "W503"]
