[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
license = "MIT"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
description = "Utilities for Ex-DRF."
version = "0.1.16"
name = "exdrf-util"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
  "exdrf",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
  "openpyxl-stubs",
  "reportlab-stubs"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exdrf_util = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
extend-ignore = ["E203", "E501", "W503"]

[tool.ruff]
line-length = 80
target-version = "py312"
extend-exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]  # E=pycodestyle, F=pyflakes, I=imports
ignore = ["ANN401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
