[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
license = "MIT"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
description = "Input from excel files and output to excel files."
version = "0.1.15"
name = "exdrf_xl"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
  "exdrf",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exdrf_xl = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
extend-ignore = ["E203", "E501", "W503"]

[tool.ruff]
line-length = 80
target-version = "py312"
extend-exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]  # E=pycodestyle, F=pyflakes, I=imports
ignore = ["ANN401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
