[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
license = "MIT"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
description = "Describe datasets, resources and their fields."
version = "0.1.14"
name = "exdrf"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
  "attrs>=25.1.0",
  "inflect>=7.5.0",
  "SQLAlchemy>=2.0.38",
  "Unidecode>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "build",
  "flake8",
  "isort",
  "mypy",
  "ruff",
  "pre-commit",
  "pyproject-flake8",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
  "pre-commit",
  "click>=8.1.8,<8.2.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
exdrf = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
docstring-convention = "google"
max-line-length = 80
extend-ignore = ["E203", "E501", "W503"]
